rust/crates/swf-tui/tests/snapshots/render__empty_120x40.snap
---
source: crates/swf-tui/tests/render.rs
expression: "draw(&model, Theme::mono(), 120, 40)"
---
swf prod  ·  airflow https://airflow.example.com  ·  repo acme/widgets  ·  owner me@example.com
actor admin  ·  refreshed 09:30:00 (0s ago)
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 1 attention     0 │ jobs 0 rows                                                  │ nothing selected
 2 jobs          0 │no jobs in this pass  ·  t triggers a blueprint               │
 3 job detail      │                                                              │
 4 review          │                                                              │
 5 deliveries    0 │                                                              │
 6 infrastructure 2│                                                              │
 7 history         │                                                              │
                   │                                                              │
                   │                                                              │
                   │                                                              │
                   │                                                              │
                   │                                                              │
                   │                                                              │
                   │                                                              │
                   │                                                              │
                   │                                                              │
                   │                                                              │
                   │                                                              │
                   │                                                              │
                   │                                                              │
                   │                                                              │
                   │                                                              │
                   │                                                              │
                   │                                                              │
                   │                                                              │
                   │                                                              │
                   │                                                              │
 activity ──────────────────────────────────────────────────────────────────────────────────────────────────────────────
09:30:00 watching prod at https://airflow.example.com







enter detail  t trigger  s stop  o open  L logs  r refresh  / search  : cmd  ? help  q quit
