rust/crates/swf-tui/tests/snapshots/render__narrow_jobs_80x24.snap
---
source: crates/swf-tui/tests/render.rs
expression: "draw(&model, Theme::mono(), 80, 24)"
---
swf prod  ·  airflow https://airflow.example.com  ·  repo acme/widgets  ·  owner
actor admin  ·  refreshed 09:30:00 (0s ago)
────────────────────────────────────────────────────────────────────────────────
 1 attention     5 │ jobs 4 rows
 2 jobs          4 │dag      run            job issue  stage    state
 3 job detail      │factory  manual__2026-0 0   142    approve_ ◆ awaiting_input
 4 review          │factory  manual__2026-0 1   143    build_an ▸ running
 5 deliveries    2 │hotfix   manual__2026-0 0   sre-9  build_an ✗ failed
 6 infrastructure 7│hotfix   manual__2026-0 1   sre-10 deliver  ✓ success
 7 history         │
                   │
                   │
                   │
                   │
                   │
                   │
                   │
 activity ──────────────────────────────────────────────────────────────────────
09:30:00 watching prod at https://airflow.example.com




enter detail  t trigger  s stop  o open  L logs  r refresh  / search  : cmd  ? h
